--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -74,3 +74,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
+.bree-serif-regular {
+  font-family: "Bree Serif", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
