--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -75,11 +75,10 @@
   }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
 .bree-serif-regular {
   font-family: "Bree Serif", serif;
-  
-  
-}
+  font-weight: 300;  
+} */
 
 
